# scrapy-mongodb-fastapi-apartments

./: .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
.github/workflows/: lint_and_test.yml
api/: __init__.py  apartments.py  app.py
docs/: architecture.excalidraw  diagram_as_a_code.py
scraper/: settings.py
scraper/commands/: run.py
scraper/pages/: __init__.py  yit.py
scraper/pipelines/: debug.py  minio.py  mongo.py
scraper/spiders/: yit.py
scraper/spiders/resources/: yit.request_body.json
shared/: models.py  odm.py  s3.py  settings.py
tests/: conftest.py  test_api.py
tests/api/: test_apartments.py
tests/scraper/pages/: test_yit.py
tests/scraper/pipelines/: test_mongo.py
tests/scraper/spiders/: __init__.py  test_yit.py
tests/shared/: test_models.py
